--- a/about.html
+++ b/about.html
@@ -34,6 +34,82 @@
         <p>IT’S A-ME, MARIO!</p>
         <div class="options-container"></div>
     </main>
-    <script src="script.js"></script>
-    </body>
-    </html>
+    <section>
+        <div class="main-section">
+            <div class="section1">
+                <h3><b>My Background</b></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum rem ducimus dolorum temporibus nulla
+                    officiis, laboriosam quos quisquam quibusdam. <br><br>
+                    Fugiat, sapiente eaque. Dolor quibusdam, aliquid est,
+                    accusantium debitis voluptates unde iure numquam voluptas nisi minus suscipit illum asperiores
+                    perferendis expedita sit in autem fugit esse? Voluptatibus, enim minima ipsam ipsum, expedita fugit
+                    aut, est repellat cupiditate inventore explicabo delectus nemo natus! Libero molestias atque
+                    voluptatum incidunt aspernatur eveniet optio esse tenetur nihil assumenda nisi, porro reiciendis
+                    sint, inventore expedita. <br><br>
+                    Blanditiis qui ullam unde excepturi eveniet, eos dolore nam minus sit
+                    laboriosam delectus, ea tempora dicta modi repellat cupiditate error mollitia repudiandae voluptates
+                    ipsam accusamus. <br><br>
+                    Saepe ex maiores sequi laborum porro nostrum adipisci? Quia illo laborum fugit
+                    beatae voluptates architecto, consequatur eligendi a unde esse totam laboriosam repellat quis?
+                    Ullam, quas voluptates. Soluta veniam consectetur sit earum inventore. <br><br>
+                    Iusto voluptatem error nihil
+                    atque cum et id, saepe vitae obcaecati veritatis fugit quae, ullam cupiditate neque? Blanditiis
+                    unde, laborum veniam odio totam animi nostrum velit perferendis sed maiores vitae laudantium
+                    explicabo voluptas aspernatur dolorum eaque quasi perspiciatis alias dolores. <br><br>
+                    Quos eum eius
+                    perspiciatis ex debitis, commodi quaerat sed tempora sint nam, ratione iste ducimus sequi,
+                    accusantium corporis maxime unde! Culpa, aut rerum?
+                </p>
+                <br><br><br><br>
+
+                <h3><b>My Hobbies and Interests</b></h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet beatae at iusto, aliquam saepe illum.
+                    Nam fugit ipsum totam aliquid ratione. <br><br>
+                    Eligendi, perspiciatis ad. Repellendus, obcaecati laboriosam
+                    vero aspernatur ea sequi, harum culpa quisquam assumenda soluta numquam minus eos nihil dolor est
+                    mollitia molestiae ipsam itaque adipisci deleniti! In ut tempore ad ipsam totam, possimus amet
+                    similique recusandae corporis nostrum blanditiis, distinctio consectetur. <br><br>
+                    Voluptate aliquam
+                    molestias voluptatum minima ad, ab et quia magnam autem exercitationem reprehenderit quasi numquam
+                    modi tempore quas officiis doloremque qui, blanditiis explicabo facilis, eum enim ullam? Obcaecati,
+                    voluptates? Ipsum labore soluta et, sed modi eveniet officia.
+                </p>
+            </div>
+        </div>
+        <div class="btn">
+            <a href="contacts.html"><img src="images/Icon.png" alt=""> Contact Me</a>
+        </div>
+        <footer>
+            <div class="footer-left">
+                <a href="contacts.html"><b>Contacts</b></a>
+                <a href="about.html"><b>About</b></a>
+                <a href="projects.html"><b>Projects</b></a>
+
+                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.6001 80V8H41.6001V80H33.6001Z" fill="white" />
+                    <path d="M0 64V0H8V64H0Z" fill="white" />
+                    <path d="M67.2 8L8 8L8 0L67.2 0V8Z" fill="white" />
+                    <path d="M67.2 35.2L8 35.2L8 27.2L67.2 27.2V35.2Z" fill="white" />
+                    <path d="M72 64V40H80V64H72Z" fill="white" />
+                    <path d="M72 22.4V12.8H80V22.4H72Z" fill="white" />
+                    <path d="M72 40C72 37.6 69.6 35.2 67.2 35.2V27.2C73.6 27.2 80 32.8 80 40H72Z" fill="white" />
+                    <path d="M72 12.8C72 10.4 69.6 8 67.2 8V0C73.6 0 80 5.6 80 12.8H72Z" fill="white" />
+                    <path d="M67.2 27.2C69.6 27.2 72 24.8 72 22.4H80C80 28.8 74.4 35.2 67.2 35.2V27.2Z" fill="white" />
+                </svg>
+            </div>
+
+            <div class="footer-middle">
+                <p><b>tikolesnehal@gmail.com</b></p>
+                <p><b>+123 456 7890</b></p>
+
+            </div>
+
+
+
+        </footer>
+
+        <script src="script.js"></script>
+</body>
+
+</html>
