--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
         <div class="section2">
             <div class="box1">
-                <h4>Project Title : <br> Registration-Form</h4><img src="images/project-card-image-size 1.png" alt="">
+                <a href="https://snehaltikole14.github.io/Registration-Form/"><h4>Project Title : <br> Registration-Form</h4><img src="images/project-card-image-size 1.png" alt=""></a>
             </div>
             <div class="box1">
-                <h4>Project Title : <br> Class-IQ Website</h4><img src="images/project-card-image-size 1.png" alt="">
+                <a href="https://snehaltikole14.github.io/Class-iq-website/"> <h4>Project Title : <br> Class-IQ Website</h4><img src="images/project-card-image-size 1.png" alt=""></a>
             </div>
             <div class="box1">
-                <h4>Project Title : <br> To-Do List Website</h4><img src="images/project-card-image-size 1.png" alt="">
+            <a href="https://snehaltikole14.github.io/todo/"><h4>Project Title : <br> To-Do List Website</h4><img src="images/project-card-image-size 1.png" alt=""></a>
             </div>
         </div>
         <div class="btn">
